add_subdirectory(A)
add_subdirectory(B)
add_subdirectory(C)
add_subdirectory(D)
add_subdirectory(E)
add_subdirectory(F)
add_subdirectory(G)
add_subdirectory(H)
add_subdirectory(I)
add_subdirectory(J)
add_subdirectory(K)
add_subdirectory(L)
add_subdirectory(M)
add_subdirectory(N)
add_subdirectory(O)
add_subdirectory(P)
add_subdirectory(Q)
add_subdirectory(R)
add_subdirectory(T)
add_subdirectory(U)
add_subdirectory(V)